--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -23,50 +23,86 @@ jobs:
       run: |
         mamba install -c conda-forge cmake ninja compilers gdal opencv pcl boost eigen -y
 
-    # 3. EL EXPLORADOR: Encontrar las rutas reales (CORREGIDO)
-    - name: Find Paths with Python
+    # 3. EL RASTREADOR GPS (Busca archivos específicos)
+    - name: Pinpoint Files with Python
       shell: bash -l {0}
       run: |
         python -c "
         import os
         import glob
+        import sys
         
-        # CORRECCIÓN AQUÍ: Usamos doble backslash para escapar correctamente
-        prefix = os.environ['CONDA_PREFIX'].replace('\\\\', '/')
-        library_inc = f'{prefix}/Library/include'
-        library_lib = f'{prefix}/Library/lib'
-        
-        print(f'Explorando headers en: {library_inc}')
-        
-        # 1. Buscar carpeta de version de PCL (ej: pcl-1.14)
-        if os.path.exists(library_inc):
-            pcl_dirs = [d for d in os.listdir(library_inc) if d.startswith('pcl-') and os.path.isdir(os.path.join(library_inc, d))]
-        else:
-            pcl_dirs = []
+        # Función para normalizar rutas a formato Unix (que CMake ama)
+        def fix_path(p):
+            return os.path.abspath(p).replace('\\', '/')
 
-        if pcl_dirs:
-            pcl_inc_path = f'{library_inc}/{pcl_dirs[0]}'
-            print(f'DETECTADO PCL INCLUDE: {pcl_inc_path}')
-        else:
-            print('ADVERTENCIA: No se vio carpeta pcl-X.X, usando raiz')
-            pcl_inc_path = library_inc
+        base_dir = os.environ['CONDA_PREFIX']
+        print(f'Escaneando base: {base_dir}')
 
-        # 2. Buscar ruta de Eigen
-        eigen_path = f'{library_inc}/eigen3'
+        # --- BUSQUEDA DE HEADERS ---
+        # Buscamos 'obj_io.h' para saber dónde rayos está PCL
+        pcl_include_root = ''
+        for root, dirs, files in os.walk(base_dir):
+            if 'obj_io.h' in files:
+                # Encontramos .../include/pcl-1.X/pcl/io/obj_io.h
+                # Necesitamos subir 3 niveles para obtener .../include/pcl-1.X
+                path = fix_path(root)
+                if path.endswith('/pcl/io'):
+                     pcl_include_root = path.replace('/pcl/io', '')
+                     print(f'FOUND PCL HEADER ROOT: {pcl_include_root}')
+                     break
         
-        # 3. Guardar en variables de entorno para el siguiente paso
+        # Buscamos 'StdVector' para Eigen
+        eigen_include_root = ''
+        for root, dirs, files in os.walk(base_dir):
+            if 'StdVector' in files:
+                # Eigen suele estar en .../eigen3/Eigen/StdVector
+                path = fix_path(root)
+                if path.endswith('/Eigen'):
+                    eigen_include_root = path.replace('/Eigen', '')
+                    print(f'FOUND EIGEN HEADER ROOT: {eigen_include_root}')
+                    break
+
+        if not pcl_include_root:
+            print('ERROR: No pude encontrar obj_io.h')
+            # Fallback desesperado
+            pcl_include_root = fix_path(f'{base_dir}/Library/include')
+
+        if not eigen_include_root:
+             # Fallback
+             eigen_include_root = fix_path(f'{base_dir}/Library/include/eigen3')
+
+        # --- BUSQUEDA DE LIBRERIAS ---
+        # Python hace el trabajo sucio de listar los archivos .lib
+        lib_dir = fix_path(f'{base_dir}/Library/lib')
+        
+        # Usamos glob de Python que es más confiable
+        pcl_libs = glob.glob(f'{lib_dir}/pcl_*.lib')
+        opencv_libs = glob.glob(f'{lib_dir}/opencv_*.lib')
+        boost_libs = glob.glob(f'{lib_dir}/boost_*.lib')
+        
+        # Convertimos las listas a strings separados por punto y coma (formato CMake)
+        pcl_libs_str = ';'.join([fix_path(p) for p in pcl_libs])
+        opencv_libs_str = ';'.join([fix_path(p) for p in opencv_libs])
+        boost_libs_str = ';'.join([fix_path(p) for p in boost_libs])
+        gdal_lib = fix_path(f'{lib_dir}/gdal_i.lib')
+
+        print(f'PCL LIBS COUNT: {len(pcl_libs)}')
+
+        # Escribimos al entorno de GitHub
         with open(os.environ['GITHUB_ENV'], 'a') as f:
-            f.write(f'REAL_PCL_INCLUDE={pcl_inc_path}\n')
-            f.write(f'REAL_EIGEN_INCLUDE={eigen_path}\n')
-            f.write(f'REAL_LIB_PATH={library_lib}\n')
+            f.write(f'DETECTED_PCL_INCLUDE={pcl_include_root}\n')
+            f.write(f'DETECTED_EIGEN_INCLUDE={eigen_include_root}\n')
+            f.write(f'DETECTED_PCL_LIBS={pcl_libs_str}\n')
+            f.write(f'DETECTED_CV_LIBS={opencv_libs_str}\n')
+            f.write(f'DETECTED_BOOST_LIBS={boost_libs_str}\n')
+            f.write(f'DETECTED_GDAL_LIB={gdal_lib}\n')
         "
 
-    # 4. COMPILACIÓN CON RUTAS EXACTAS
+    # 4. COMPILACIÓN QUIRÚRGICA
     - name: Compile
       shell: bash -l {0}
       run: |
-        echo "Usando PCL Include: $REAL_PCL_INCLUDE"
-        
         # --- GENERAMOS EL CMAKELISTS.TXT ---
         cat > CMakeLists.txt <<EOF
         cmake_minimum_required(VERSION 3.5)
@@ -75,26 +111,24 @@ jobs:
         
         add_definitions(-D_CRT_SECURE_NO_WARNINGS -DNOMINMAX -DBOOST_USE_WINDOWS_H)
 
-        # 1. HEADERS
-        include_directories("$REAL_PCL_INCLUDE")
-        include_directories("$REAL_EIGEN_INCLUDE")
+        # 1. HEADERS DIRECTOS (Sin adivinanzas)
+        include_directories("$DETECTED_PCL_INCLUDE")
+        include_directories("$DETECTED_EIGEN_INCLUDE")
         include_directories("\$ENV{CONDA_PREFIX}/Library/include")
         include_directories("src")
         
-        # 2. LIBRERIAS (.LIB)
-        link_directories("$REAL_LIB_PATH")
+        # 2. LIBRERIAS (Pasadas directamente como lista de archivos)
+        # Ya no usamos GLOB aquí, usamos lo que Python encontró
         
-        file(GLOB PCL_LIBS "$REAL_LIB_PATH/pcl_*.lib")
-        file(GLOB CV_LIBS "$REAL_LIB_PATH/opencv_*.lib")
-        file(GLOB BOOST_LIBS "$REAL_LIB_PATH/boost_*.lib")
-        set(GDAL_LIB "$REAL_LIB_PATH/gdal_i.lib")
-        
-        message(STATUS "Ruta de librerias: $REAL_LIB_PATH")
-        message(STATUS "PCL Libs found: \${PCL_LIBS}")
-
         add_executable(odm_orthophoto src/OdmOrthoPhoto.cpp src/Logger.cpp src/main.cpp)
         
-        target_link_libraries(odm_orthophoto \${PCL_LIBS} \${CV_LIBS} \${GDAL_LIB} \${BOOST_LIBS})
+        # Enlazamos las variables de entorno directas
+        target_link_libraries(odm_orthophoto 
+            "$DETECTED_PCL_LIBS" 
+            "$DETECTED_CV_LIBS" 
+            "$DETECTED_GDAL_LIB" 
+            "$DETECTED_BOOST_LIBS"
+        )
         EOF
         
         # --- COMPILACIÓN ---
