--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -23,108 +23,87 @@ jobs:
       run: |
         mamba install -c conda-forge cmake ninja compilers gdal opencv pcl boost eigen -y
 
-    # 3. EL RASTREADOR GPS (Corregido)
-    - name: Pinpoint Files with Python
+    # 3. EL ARQUITECTO PYTHON (Genera el CMakeLists.txt directamente)
+    - name: Generate Config with Python
       shell: bash -l {0}
       run: |
         python -c "
         import os
         import glob
-        import sys
         
-        # CORRECCIÓN AQUÍ: Usamos doble backslash para escapar correctamente
-        def fix_path(p):
-            return os.path.abspath(p).replace('\\\\', '/')
-
-        base_dir = os.environ['CONDA_PREFIX']
-        print(f'Escaneando base: {base_dir}')
-
-        # --- BUSQUEDA DE HEADERS ---
-        pcl_include_root = ''
-        for root, dirs, files in os.walk(base_dir):
-            if 'obj_io.h' in files:
-                path = fix_path(root)
-                if path.endswith('/pcl/io'):
-                     pcl_include_root = path.replace('/pcl/io', '')
-                     print(f'FOUND PCL HEADER ROOT: {pcl_include_root}')
-                     break
+        # Ruta base corregida
+        prefix = os.environ['CONDA_PREFIX'].replace('\\\\', '/')
+        inc_dir = f'{prefix}/Library/include'
+        lib_dir = f'{prefix}/Library/lib'
         
-        eigen_include_root = ''
-        for root, dirs, files in os.walk(base_dir):
-            if 'StdVector' in files:
-                path = fix_path(root)
-                if path.endswith('/Eigen'):
-                    eigen_include_root = path.replace('/Eigen', '')
-                    print(f'FOUND EIGEN HEADER ROOT: {eigen_include_root}')
-                    break
-
-        if not pcl_include_root:
-            print('ERROR: No pude encontrar obj_io.h, usando fallback')
-            pcl_include_root = fix_path(f'{base_dir}/Library/include')
-
-        if not eigen_include_root:
-             eigen_include_root = fix_path(f'{base_dir}/Library/include/eigen3')
-
-        # --- BUSQUEDA DE LIBRERIAS ---
-        lib_dir = fix_path(f'{base_dir}/Library/lib')
+        print(f'Analizando carpeta: {inc_dir}')
         
-        # Usamos glob para encontrar los archivos .lib reales
+        # --- ESTRATEGIA DE INCLUSIÓN AGRESIVA ---
+        # 1. Añadimos la raíz include
+        includes = [inc_dir, 'src']
+        
+        # 2. Añadimos explícitamente eigen3
+        includes.append(f'{inc_dir}/eigen3')
+        
+        # 3. Buscamos CUALQUIER carpeta que empiece por pcl- y la añadimos
+        # Esto soluciona el problema de pcl/io/obj_io.h no encontrado
+        if os.path.exists(inc_dir):
+            for d in os.listdir(inc_dir):
+                if d.startswith('pcl-'):
+                    full_path = f'{inc_dir}/{d}'
+                    print(f'Agregando ruta de version PCL: {full_path}')
+                    includes.append(full_path)
+
+        # Preparamos las rutas para CMake (entre comillas)
+        includes_str = ' '.join([f'\"{p}\"' for p in includes])
+        
+        # --- BUSQUEDA DE LIBRERÍAS ---
+        # Buscamos todos los .lib necesarios
         pcl_libs = glob.glob(f'{lib_dir}/pcl_*.lib')
-        opencv_libs = glob.glob(f'{lib_dir}/opencv_*.lib')
+        cv_libs = glob.glob(f'{lib_dir}/opencv_*.lib')
         boost_libs = glob.glob(f'{lib_dir}/boost_*.lib')
+        gdal_lib = f'{lib_dir}/gdal_i.lib'
         
-        # Convertimos a strings separados por punto y coma (para CMake)
-        pcl_libs_str = ';'.join([fix_path(p) for p in pcl_libs])
-        opencv_libs_str = ';'.join([fix_path(p) for p in opencv_libs])
-        boost_libs_str = ';'.join([fix_path(p) for p in boost_libs])
-        gdal_lib = fix_path(f'{lib_dir}/gdal_i.lib')
+        # Juntamos todo en una lista grande
+        all_libs = pcl_libs + cv_libs + boost_libs + [gdal_lib]
+        # Normalizamos barras
+        all_libs = [l.replace('\\\\', '/') for l in all_libs]
+        all_libs_str = ' '.join([f'\"{l}\"' for l in all_libs])
+        
+        print(f'Total librerías encontradas: {len(all_libs)}')
 
-        print(f'PCL LIBS COUNT: {len(pcl_libs)}')
-
-        with open(os.environ['GITHUB_ENV'], 'a') as f:
-            f.write(f'DETECTED_PCL_INCLUDE={pcl_include_root}\n')
-            f.write(f'DETECTED_EIGEN_INCLUDE={eigen_include_root}\n')
-            f.write(f'DETECTED_PCL_LIBS={pcl_libs_str}\n')
-            f.write(f'DETECTED_CV_LIBS={opencv_libs_str}\n')
-            f.write(f'DETECTED_BOOST_LIBS={boost_libs_str}\n')
-            f.write(f'DETECTED_GDAL_LIB={gdal_lib}\n')
-        "
-
-    # 4. COMPILACIÓN QUIRÚRGICA
-    - name: Compile
-      shell: bash -l {0}
-      run: |
-        # --- GENERAMOS EL CMAKELISTS.TXT ---
-        cat > CMakeLists.txt <<EOF
+        # --- ESCRITURA DEL ARCHIVO ---
+        cmake_content = f'''
         cmake_minimum_required(VERSION 3.5)
         project(odm_orthophoto)
         set(CMAKE_CXX_STANDARD 14)
         
         add_definitions(-D_CRT_SECURE_NO_WARNINGS -DNOMINMAX -DBOOST_USE_WINDOWS_H)
-
-        # 1. HEADERS DIRECTOS
-        include_directories("$DETECTED_PCL_INCLUDE")
-        include_directories("$DETECTED_EIGEN_INCLUDE")
-        include_directories("\$ENV{CONDA_PREFIX}/Library/include")
-        include_directories("src")
         
-        # 2. DEFINIR EJECUTABLE
+        # Aquí inyectamos las rutas que encontró Python
+        include_directories({includes_str})
+        
         add_executable(odm_orthophoto src/OdmOrthoPhoto.cpp src/Logger.cpp src/main.cpp)
         
-        # 3. ENLAZAR LIBRERIAS
-        # Nota: Pasamos las variables entre comillas para manejar espacios en rutas si los hubiera
-        target_link_libraries(odm_orthophoto 
-            "$DETECTED_PCL_LIBS" 
-            "$DETECTED_CV_LIBS" 
-            "$DETECTED_GDAL_LIB" 
-            "$DETECTED_BOOST_LIBS"
-        )
-        EOF
+        # Aquí inyectamos los archivos .lib exactos
+        target_link_libraries(odm_orthophoto {all_libs_str})
+        '''
         
-        # --- COMPILACIÓN ---
+        with open('CMakeLists.txt', 'w') as f:
+            f.write(cmake_content)
+            
+        print('--- CMakeLists.txt generado exitosamente ---')
+        print(cmake_content)
+        "
+
+    # 4. COMPILACIÓN (Ya no generamos nada, solo ejecutamos)
+    - name: Compile
+      shell: bash -l {0}
+      run: |
         mkdir build
         cd build
         
+        # CMake solo tiene que leer el archivo que Python creó
         cmake .. -G "Visual Studio 16 2019" -A x64 -DCMAKE_BUILD_TYPE=Release
         cmake --build . --config Release
         
